compiler/tests/compiler/expected/output/EnumTypeErrorParam.shtk.txt
MODULE EnumTypeErrorParam.shtk
ERROR in Line 7 Col 12

    foobar(one)
           ^
Type error, did not expect EnumTypeErrorParam.shtk::bar, expected int

EnumTypeErrorParam.shtk:7:11
